[gd_scene load_steps=15 format=3 uid="uid://cvfpcoia8jape"]

[ext_resource type="Script" uid="uid://bdqnwcljito8r" path="res://scripts/coin.gd" id="1_i64fm"]
[ext_resource type="Texture2D" uid="uid://e4rw2c0gruq6" path="res://Common Pick-ups/Coin (16 x 16).png" id="1_rwqht"]
[ext_resource type="Texture2D" uid="uid://dd265ixuuym2o" path="res://Items & UI/Effects/Yellow_Sparkle (16 x 16).png" id="2_11l1o"]
[ext_resource type="AudioStream" uid="uid://d3dnx131es4dp" path="res://efeitos sonoros 2/pegar moeda.wav" id="4_d14el"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wnlwo"]
atlas = ExtResource("2_11l1o")
region = Rect2(0, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jig8b"]
atlas = ExtResource("2_11l1o")
region = Rect2(20, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmuha"]
atlas = ExtResource("2_11l1o")
region = Rect2(40, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfxoj"]
atlas = ExtResource("2_11l1o")
region = Rect2(60, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i64fm"]
atlas = ExtResource("1_rwqht")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_11l1o"]
atlas = ExtResource("1_rwqht")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d14el"]
atlas = ExtResource("1_rwqht")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ikuy"]
atlas = ExtResource("1_rwqht")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_wnlwo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnlwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jig8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmuha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfxoj")
}],
"loop": false,
"name": &"collect",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i64fm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11l1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d14el")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ikuy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_jig8b"]
radius = 6.0

[node name="coin" type="Area2D"]
collision_layer = 8
script = ExtResource("1_i64fm")

[node name="anim" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wnlwo")
animation = &"collect"
autoplay = "default"
frame = 3
frame_progress = 1.0

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jig8b")

[node name="CoinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_d14el")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
